--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^29.0.3",
+    "@types/node": "^18.7.18",
+    "@types/react": "^18.0.20",
+    "@types/react-dom": "^18.0.6",
     "apexcharts": "^3.35.3",
     "axios": "^0.21.1",
     "framer-motion": "^4.1.17",
@@ -15,6 +19,7 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.0",
+    "typescript": "^4.8.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -25,9 +30,11 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended",
+      "plugin:react/recommended"
+    ],
+    "parser": "@typescript-eslint/parser"
   },
   "browserslist": {
     "production": [
@@ -40,5 +47,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^5.38.0",
+    "eslint": "^8.23.1",
+    "eslint-plugin-react": "^7.31.8",
+    "prettier": "^2.7.1"
   }
 }
